2008-05-25  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Fail if libXext or libXt not found when building
	x11 server. Set have_freetype variable.

2008-05-25  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Tools/GNUmakefile.postamble: Use GNUSTEP_DOC instead of
	GNUSTEP_DOCUMENTATION, and GNUSTEP_DOC_MAN instead of
	GNUSTEP_DOCUMENTATION_MAN.

2008-05-22  Adam Fedor  <fedor@gnu.org>

	* Source/cairo/CairoContext.m (-GSSetDevice:::): Fix memory leak.

2008-05-16  Adam Fedor  <fedor@gnu.org>

	* Source/XGCommonFont.m (XGFontCacheName): New function to standardize
	display name (and handle new Mac OS X display names).
	* Tools/font_cacher.m ([XFontCacher -getPathFor:display]): Use it.
	* Source/xlib/XGFontManager.m (cache_name):  Use it.

2008-04-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m (Ones): Correct the parameter name.
	* Source/winlib/WIN32FontInfo.m (-glyphIsEncoded:): Add parameter
	to windows call to supress defaults glyphs for missing ones.

2008-04-08 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGGState.m (-_paintPath:, -_doComplexPath:...):
	Correct the handling of complex path filling. This is needed for
	the glyph drawing.
	
2008-04-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m
	(-appendBezierPathWithGlyphs:count:toBezierPath:) Implement this
	method with code copied over from the art backend.

2008-04-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/art/ftfont.m,
	* Source/art/ftfont-old.m (-glyphPacking): Add missing method.
	* Source/gsc/GSContext.m
	(-appendBezierPathWithPackedGlyphs:path:): Send on to gstate.
	* Headers/gsc/GSGStateOps.h
	(-appendBezierPathWithPackedGlyphs:path:): New method.
	* Source/gsc/GSGState.m (-DPScharpath:,
	-appendBezierPathWithPackedGlyphs:path:): Implement these methods.
	* Source/xlib/GSXftFontInfo.m (-coveredCharacterSet) Add missing
	method.

2008-04-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32FontInfo.m